[project]
name = "name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.scripts]
hello = "name:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  {include-group = "test"},
  {include-group = "lint"},
  {include-group = "lsp"},
]
lsp = [
  "python-lsp-server",
]
lint = [
  "ruff>=0.6.7",
]
test = [
  "pytest-cov>=6.0.0",
  "pytest>=8.3.3",
]
